# Yaafe

./: .binstar.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  CITATION.rst  CITATION.txt  CMakeLists.txt  DISCLAIMER  Dockerfile  INSTALL_WINDOWS  README.rst  changelog.html  docker-entrypoint.sh  features.html  genindex.html  index.html  install.sh  manual.html  objects.inv  old_README.md  search.html  searchindex.js  yaafe-config.cmake
_sources/: changelog.txt  features.txt  index.txt  manual.txt
_sources/manual/: install.txt  internals.txt  tools.txt
_static/: classic.css  default.css  pygments.css  sidebar.js
cmake-modules/: FindArgtable2.cmake  FindDL.cmake  FindFFTW3.cmake  FindHDF5.cmake  FindLapack.cmake  FindMPG123.cmake  FindMatlab.cmake  FindSndfile.cmake  cmake_uninstall.cmake.in
conda.recipe/: build.sh  featureplan  meta.yaml
doc/: CMakeLists.txt  Makefile  build_doc.sh  run_doctest.sh
doc/doc_cpp/: CMakeLists.txt  Doxyfile.in
doc/doc_python/: CMakeLists.txt  build_doc.sh.in  doctestenv.py.in  run_doctest.sh.in
doc/doc_python/source/: changelog.rst  conf.py.in  features.rst  index.rst
doc/doc_python/source/_templates/: version.html
doc/doc_python/source/manual/: extending.rst  install.rst  quickstart.rst  tools.rst
doc/source/: changelog.rst  conf.py  index.rst  olddocs.rst
doc/source/_templates/: layout.html  manualtoc.html  sidebar_tp_logo.html
doc/source/manual/: pythonbindings.rst
examples/: frames.py
manual/: extending.html  install.html  internals.html  pythonbindings.html  quickstart.html  tools.html
matlab/: CMakeLists.txt  Yaafe.m  yaafeLoadH5Feature.m  yaafeLoadH5FeatureAttributes.m
resources/: yaflow32k
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/yaafe-components/: CMakeLists.txt  registration.cpp  registration.h
src_cpp/yaafe-components/audio/: AC2LPC.cpp  AC2LPC.h  Abs.cpp  Abs.h  AdvancedFrameTokenizer.cpp  AdvancedFrameTokenizer.h  AmplitudeModulation.cpp  AmplitudeModulation.h  AutoCorrelation.cpp  AutoCorrelation.h  AutoCorrelationPeaksIntegrator.cpp  AutoCorrelationPeaksIntegrator.h  CQT.cpp  CQT.h  Cepstrum.cpp  Cepstrum.h  ChordDictDecoder.cpp  ChordDictDecoder.h  ChordTemplate.cpp  ChordTemplate.h  Chroma2.cpp  Chroma2.h  Chroma2ChordDict.cpp  Chroma2ChordDict.h  ChromaReduce.cpp  ChromaReduce.h  ChromaTune.cpp  ChromaTune.h  ComplexDomainFlux.cpp  ComplexDomainFlux.h  Concatenate.cpp  Concatenate.h  Decimate2.cpp  Decimate2.h  Decrease.cpp  Decrease.h  Derivate.cpp  Derivate.h  Difference.cpp  Difference.h  (+66 more)
src_cpp/yaafe-components/flow/: Join.cpp  Join.h
src_cpp/yaafe-core/: AudioFileProcessor.cpp  AudioFileProcessor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ComponentHelpers.h  ComponentPool.cpp  ComponentPool.h  DataFlow.cpp  DataFlow.h  DataFlowParser.l  DataFlowParser.l.c  DataFlowParser.y  DataFlowParser.y.cpp  DataFlowParser.y.hpp  DataFlowParserCommon.h  DataFlowParserContext.cpp  DataFlowParserContext.h  DirectedGraph.h  Engine.cpp  Engine.h  OutputFormat.cpp  OutputFormat.h  Ports.h  dlfcn_win32.c  update_parser.sh  utils.cpp  utils.h
src_cpp/yaafe-io/: CMakeLists.txt  registration.cpp  registration.h
src_cpp/yaafe-io/io/: AudioFileReader.cpp  AudioFileReader.h  CSVWriter.cpp  CSVWriter.h  FileUtils.cpp  FileUtils.h  H5DatasetWriter.cpp  H5DatasetWriter.h  MP3FileReader.cpp  MP3FileReader.h  SmarcPFilterCache.cpp  SmarcPFilterCache.h
src_cpp/yaafe-matlab/: CMakeLists.txt  yaafemex.cpp
src_cpp/yaafe-python/: CMakeLists.txt  yaafecore.cpp  yaafecore.h  yaafecoreAudioFileProcessor.cpp  yaafecoreAudioFileProcessor.h  yaafecoreDataFlow.cpp  yaafecoreDataFlow.h  yaafecoreEngine.cpp  yaafecoreEngine.h  yaafecoreH5.cpp  yaafecoreH5.h
src_python/: CMakeLists.txt  yaafe.py  yaafefeatures.py
src_python/yaafelib/: __init__.py  _compat.py  audiofeature.py  audiofileprocessor.py  core.py  dataflow.py  engine.py  featureplan.py  features_doc.py  yaafe.py
src_python/yaafelib/yaafe_extensions/: yaafefeatures.py
