install(FILES yaafelib/yaafe.py DESTINATION ${CMAKE_INSTALL_BINDIR} RENAME yaafe PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
install(FILES yaafelib/yaafe_extensions/yaafefeatures.py DESTINATION ${CMAKE_INSTALL_PYTHON_PACKAGES})
install(DIRECTORY yaafelib DESTINATION ${CMAKE_INSTALL_PYTHON_PACKAGES} FILES_MATCHING PATTERN "*.py" PATTERN ".svn" EXCLUDE)
